# upload-stick

./: Cargo.toml  LICENSE-MIT  README.md  upload-stick-prepare.service  upload-stick-run.service  upload-stick-start.service
src/: lib.rs  main.rs  upload_command.rs  upload_db.rs  upload_stick_lib.rs
