[package]
name = "upload-stick"
version = "0.1.0"
authors = ["Joel Colledge <joel.colledge@gmail.com>"]

[[bin]]
name = "upload-stick-prepare"
path = "src/bin/upload_stick_prepare.rs"

[[bin]]
name = "upload-stick-start"
path = "src/bin/upload_stick_start.rs"

[[bin]]
name = "upload-stick-run"
path = "src/bin/upload_stick_run.rs"
